# template

./: .clang-format  .clangd  .devcontainer.json  CHANGELOG.md  CMakeLists.txt  README.md  osv-scanner.json
.github/workflows/: main.yml
include/: template.h
include/template/: template.h
src/: template.c
test/: template.c
